--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -92,10 +92,8 @@ jobs:
           branch=${1}
           existed_in_local=$(git branch --list ${branch})
 
-          if [[ -z ${existed_in_local} ]]; then
-              echo 0
-          else
-              echo 1
+          if ! [[ -z ${existed_in_local} ]]; then
+              git rebase origin/${{ inputs.release }}
           fi
           
       
