--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -89,15 +89,8 @@ jobs:
         working-directory: ./cluster
         run: |-
           git fetch
-          branch=${1}
-          existed_in_local=$(git branch --list ${branch})
-
-          if [[ !-z ${existed_in_local} ]]; then
-              git rebase origin/${{ inputs.release }}
-          fi
-          
-      
-          git push origin/${{ inputs.release }}
+          git rebase origin/${{ inputs.release }}
+          git push origin ${{ inputs.release }}
 
       - if: ${{ inputs.env != 'prod' }}
         working-directory: ./cluster
