--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -88,6 +88,7 @@ jobs:
         working-directory: ./cluster
         run: |-
           git fetch
+          git status
           git rebase origin/master
 
       - name: Commit Cluster
