--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -14,7 +14,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Java ${{ inputs.jdk }}
+    name: Node ${{ inputs.jdk }}
     steps:
       - uses: actions/checkout@v2
 
@@ -22,6 +22,8 @@ jobs:
         with:
           node-version: ${{ inputs.version }}
           registry-url: "https://npm.pkg.github.com"
+          cache: 'yarn'
+
 
       - uses: yokawasa/action-setup-kube-tools@v0.7.1
         with:
